--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 			<div id='whitespace' style="float:left; width:25%;">
                 <input type="checkbox" id="otherIdols" name="otherIdols" value="otherIdols">
                 <label for="otherIdols">Other Idols/Cards</label><br>
-				<br><br><br><br><br><br><br><br><br><br>
+		<input type="checkbox" id="Transparent" name="Transparent" value="Transparent">
+                <label for="Transparent">Transparent Cards</label><br>
+				<br><br><br><br><br><br><br><br><br>
 			</div>
         </div>
         <br><br>
