--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 								return
 							}
 						}
-						if (name == 'Transparent' || name = 'idolizedTransparent') {
+						if (name == 'Transparent' || name == 'idolizedTransparent') {
 							var cardLocation = 'https://i.schoolido.lu/cards/transparent/'+i+name+'.png'
 						} else {
 							var cardLocation = 'https://i.schoolido.lu/c/'+i+name+'.png'
