--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <label for="Transparent">Transparent Cards</label><br>
         <br><br>
         <p>Start at </p><input id="startAt" type='number' value='0'>
-        <p>End At</p><input id="totalCards" type='number' value='2839'><br><br>
+        <p>End At</p><input id="totalCards" type='number' value='2923'><br><br>
         <input type="checkbox" id="displayLinks" name="displayLinks" value="displayLinks" checked>
         <label for="displayLinks">Display filenames/links while downloading</label><br><br>
         <input type="checkbox" id="convertFiles" name="convertFiles" value="convertFiles" onchange='convertVisibility()'>
@@ -291,7 +291,7 @@
         if (document.getElementById('downloadAll').checked) {
             document.getElementById('noDownloadOther').checked = false
         }
-        window.totalCards = 2839
+        window.totalCards = 2923
         if (document.getElementById('totalCards').value && document.getElementById('totalCards').value != '') {
             var totalCards = document.getElementById('totalCards').value
         }
@@ -494,7 +494,7 @@
             }
             if (document.getElementById("findUnknownCards").checked) {
                 var blob = new Blob([JSON.stringify(u, null, 2)], {type : 'application/json'})
-                 p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">Missing card list</a>'
+                 p.innerHTML = '<a download="knownCards.json" href="'+URL.createObjectURL(blob)+'">Missing card list</a>'
                  cardList.appendChild(p)
                  return
             } else {
